--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <link href="./styles.css" rel="stylesheet"> 
     <title>New tab</title>
   </head>
@@ -23,7 +23,7 @@
         </div>
       </main>
     </div>
-    <a id="yags-link" href="https://prettycoffee.github.io/yet-another-generic-startpage/">Created with YAGS</a>
+  <!--<a id="yags-link" href="https://prettycoffee.github.io/yet-another-generic-startpage/">Created with YAGS</a>  -->
   </body>
   <script type="text/javascript" src="./scripts.js"></script>
 </html>
