--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="preview.png" type="image/gif">
     <link href="./styles.css" rel="stylesheet"> 
     <title>New tab</title>
   </head>
